[package]
name = "hun_law"
version = "0.1.0"
edition = "2021"

authors = ["Alex Badics <admin@stickman.hu>"]
license = "GPL-3.0-only"

autotests = false

[dependencies]
anyhow = "1.0"
clap = {version = "3.1", features = ["derive"]}
env_logger = "0.9.0"
flate2 = "1.0"
fn-error-context = "0.2"
from_variants = "1.0"
lazy-regex = "2.3"
log = "0.4.14"
pdf-extract-fhl = { path="../pdf-extract-fhl" }
peginator = { path = "../peginator" }
phf = "0.10"
regex = "1"
roman = "0.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.8"
ureq = "2.4"

[dev-dependencies]
pretty_assertions = "1"
rstest = "0.12"
tempfile = "3"

[build-dependencies]
peginator = { path = "../peginator" }
phf_codegen = "0.10"

[profile.release]
debug = true

[[test]]
name = "tests"
