[workspace]
members = ["hun_law_grammar"]

[package]
name = "hun_law"
version = "0.1.0"
edition = "2021"

authors = ["Alex Badics <admin@stickman.hu>"]
license = "GPL-3.0-only"

autotests = false

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
clap = { version = "3.1", features = ["derive"] }
derive-visitor = { version = "0.2.1", features = ["std-types-drive"] }
env_logger = "0.9.0"
from_variants = "1.0"
hun_law_grammar = { path = "hun_law_grammar" }
lazy-regex = "2.3"
log = "0.4.14"
pdf-extract-fhl = { path = "../pdf-extract-fhl" }
phf = "0.11"
regex = "1"
roman = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tempfile = "3"
ureq = "2.4"

[dev-dependencies]
colored = "2.0"
datatest-stable = "0.1.2"
pretty_assertions = "1"
similar = { version = "2.2" , features = ["inline"] }

[build-dependencies]
phf_codegen = "0.11"

[profile.release]
debug = true
incremental = true

[[test]]
name = "run_simple_tests"

[[test]]
harness = false
name = "run_datatests"
