[package]
name = "hun_law_grammar"
version = "0.1.0"
edition = "2021"

authors = ["Alex Badics <admin@stickman.hu>"]
license = "GPL-3.0-only"

[dependencies]
derive-visitor = { version = "0.2.1", features = ["std-types-drive"] }
peginator = { path = "../../peginator/runtime", default-features = false }

[build-dependencies]
peginator_codegen = { path = "../../peginator/codegen" }
